<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LibraryManagerActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/labelLibraryFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textLibraryFullName" />

                <EditText
                    android:id="@+id/libraryNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/textLibraryFullName"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/labelLibraryFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textLibraryFile" />

                <Button
                    android:id="@+id/buttonBrowse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="browseOnClickListener"
                    android:text="@string/textButtonBrowse" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.53"
                android:onClick="addOnClickListener"
                android:text="@string/textButtonAdd" />

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:onClick="removeOnClickListener"
                android:text="@string/textButtonRemove" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loadedLibraries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textLoadedLibraries"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/librariesList"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.26" >

            </ListView>

            <TextView
                android:id="@+id/statusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textStatus" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>